--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -18,8 +18,8 @@ footer{
     width: 100%;
     display: flex;
     justify-content:center;
-    gap: 100px;
     margin-bottom: 20px;
+    margin-top: 20%;
 }
 
 .fonteb{
@@ -37,7 +37,7 @@ footer{
     height: 25px;
     width: 120px;
     padding: 2px;
-    border: solid 1px white; 
+    border: solid 1px white;     
 }
 
 .fontep{
@@ -55,6 +55,7 @@ footer{
     height: 25px;
     width: 120px;
     padding: 2px;
+    margin-left: 1%;
 }
 
 h1{
@@ -87,4 +88,41 @@ ol{
     font-weight: 900;
     font-family: "Source Sans 3";
     margin-left: 70px;
+}
+    
+
+.avaliação{
+    font-family: "Source Sans 3", bold;
+    font-weight: 800;
+    list-style: none;
+    background-color: #d9d9d9;
+    border-radius: 3cap;
+    border: solid 1px black;
+    height: 25px;
+    width: 180px;
+    text-align: center;
+    font-size: 16px;
+    padding: 4px;
+    margin-top: 3%;
+    margin-left: -3%;
+}
+
+.fontea{
+    color:black !important;
+    text-decoration: none;   
+}
+.home{
+    display: inline-block; 
+    margin-left: -8.5%;
+    margin-top:-0.8%;
+}
+.home img{
+     width: 50px;
+    
+}
+.soft{
+    display: flex;
+    gap:20px;
+    margin-left: 2.5%;
+    margin-top: -0.7%;
 }
