--- a/Páginas API/home.css
+++ b/Páginas API/home.css
@@ -147,3 +147,8 @@ section ul{
         font-size: medium;
     }
 }
+@media screen and (max-width:420px) {
+    section ul{
+        margin-top: 3%;
+    }
+}
