--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -77,13 +77,10 @@ p{
     font-family: "Lato";
     font-weight: 900;
     width: 80%;
-    margin: 0 auto;
-
 }
 
 section{
     margin-left: 50px;
-    
 }
 
 ol{
@@ -91,7 +88,7 @@ ol{
     font-size: x-large;
     font-weight: 900;
     font-family: "Source Sans 3";
-    margin-left: 70px;
+    margin-left: 0px;
 }
     
 
@@ -108,8 +105,6 @@ ol{
     font-size: 16px;
     margin-top: 0.2;
     padding: 4px;
-
-
 }
 
 .fontea{
@@ -142,6 +137,18 @@ ol{
     height:250px;
     border: solid 10px #003336;
     background-color: #003336;
+}
+
+.alinhar2{
+    display: flex;
+    justify-content:space-between;
+}
+
+.alinhar2 img{
+    width: 320px;
+    height: 290px;
+    margin-top: -4%;
+    margin-bottom: 2%;
 }
 
 @media  screen and (max-width:768px){
@@ -211,12 +218,12 @@ ol{
         margin-bottom: 2%;
     }
     p{
-        font-size: 16px;
-        
+        font-size: 16px; 
    }
     ol{
         font-size: 14px;
         margin-left: 15px;
     }
-    
 }
+
+    
