--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -219,7 +219,6 @@ h3{
     margin-left: 20%;
     margin-top: 3%;
     margin-bottom: -5%;
-
 }
 
 #imgdor{
@@ -269,6 +268,19 @@ h3{
     margin-right:3%;
     margin-top: -5%;
 
+}
+
+#mvpimg{
+    width: 600px;
+    height: 300px;
+    margin-left: 27%;
+    margin-top: 3%;
+    margin-bottom: -5%;
+}
+
+.qpo{
+    margin-top: 100px;
+    margin-left: -72px;
 }
 
 @media  screen and (max-width:768px){
