--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -155,23 +155,25 @@ ol{
 }
 h3{
     background-color: black;
-    width: 90px;
-    height: 30px;
+    width: 500px;
+    height: 25px;
     padding: 8px;
     color: white;
     font-family: 'Source Sans 3';
     text-align: center;
 }
 .userstory{
-    display: flex;
-    justify-content: space-around;
+    display: inline;
 }
 
 #h3branco{
     background-color:#d9d9d9;
     color: black;
     font-family: 'Source Sans 3';
-    font-weight: 900;
+    font-weight: 800;
+    width: 500px;
+    height: 25px;
+    font-size: 18px;
 }
 
 #resumo{
@@ -185,14 +187,14 @@ h3{
     height: 320px;
     border-radius: 60%;
     float: inline-end;
-    margin-top: -3%;
-    margin-right: 8%;
+    margin-top: -20%;
+    margin-right: 10%;
 }
 .resumo h3{
     color:#0c0d1e;
     text-align: center;
     padding-top: 70px;
-    font-size: 25px;
+    font-size: 20px;
     font-family: "Source Sans 3", bold;
     font-weight: 900;
 }
@@ -272,15 +274,18 @@ h3{
 
 #mvpimg{
     width: 600px;
-    height: 300px;
+    height: 250px;
     margin-left: 27%;
     margin-top: 3%;
     margin-bottom: -5%;
 }
+#qpo{
+    margin-top: 1%;
+    text-align: left;
+}
 
-.qpo{
-    margin-top: 100px;
-    margin-left: -72px;
+#alinhar{
+    width: 1350px;
 }
 
 @media  screen and (max-width:768px){
@@ -297,6 +302,92 @@ h3{
     ol{
         font-size: 20px;
         margin-left: 50px;
+    }
+    #introimg{
+        width: 260px;
+        height:210px;
+    }
+    #livrointro{
+        width: 250px;
+        height: 200px;
+    }
+    #imgscrum{
+        width: 270px;
+        height: 210px; 
+        margin-left: 2%;
+    }
+    #timescrum{
+        width: 280px;
+        height: 220px; 
+    }
+    #imgartefatos{
+        width: 250px;
+        height: 250px; 
+    }
+    #burndown{
+        margin-left: 10%;
+        width: 500px;
+        margin-bottom: 5%;
+    }
+    #imgdor{
+        width: 210px;
+        height: 170px;
+        margin-right: 3%;
+    }
+    #imgdod{
+        width: 210px;
+        height: 170px;
+        margin-right: 2%;
+    }
+    #imguserstory{
+        width: 280px;
+        height: 250px;
+        margin-left: 2%;
+    }
+    #imgsoftskills{
+        width: 300px;
+        height: 250px;
+        margin-top: 8%;
+    }
+    #hardesoftimg{
+        width: 300px;
+        height: 250px;
+        margin-right: 5%;
+    }
+    #img{
+        width: 280px;
+        height: 230px;
+    }
+    #alinhar{
+        width: 650px;
+    }
+    .resumo h3{
+        padding-top: 60px;
+        font-size: 17px;
+    }
+    #resumo{
+        width: 170px;
+        height: 120px;
+    }
+    h3{
+        width: 300px;
+        height: 25px;
+        font-size: 18px;
+    }
+    .userstory{
+        display: inline;
+    }
+    
+    #h3branco{
+        font-weight: 900;
+        width: 320px;
+        height: 25px;
+        font-size: 18px;
+    }
+    #mvpimg{
+        width: 500px;
+        height: 200px;
+        margin-left: 10%;
     }
 }
 
@@ -327,7 +418,96 @@ h3{
         font-size: 16px;
         margin-left: 30px;
     }
+    #introimg{
+        width: 220px;
+        height:180px;
+        float: inherit;
+        margin-left: 18%;
+    }
+    #livrointro{
+        width: 200px;
+        height: 160px;
+        margin-bottom: 5%;
+    }
+    #imgscrum{
+        width: 270px;
+        height: 210px; 
+        margin-left: 10%;
+        float: inherit;
+    }
+    #timescrum{
+        width: 280px;
+        height: 220px; 
+        float: inherit;
+        margin-left: 10%;
+    }
+    #imgartefatos{
+        width: 190px;
+        height: 190px; 
+    }
+    #burndown{
+        margin-left: 0%;
+        width: 400px;
+        margin-bottom: 5%;
+    }
+    #imgdor{
+        width: 180px;
+        height: 150px;
+        float: initial;
+    }
+    #imgdod{
+        width: 180px;
+        height: 150px;
+        float: initial;
+        margin-top: 5%;
+    }
+    #imguserstory{
+        width: 200px;
+        height: 180px;
+        margin-top: 3%;
+        float: inline-end;
+    }
+    #imgsoftskills{
+        width: 270px;
+        height: 210px;
+        float: initial;
+        margin-left: 25%;
+    }
+    #hardesoftimg{
+        width: 270px;
+        height: 210px;
+        float: initial;
+        margin-left: 15%;
+    }
+    #img{
+        width: 250px;
+        height: 210px;
+        margin-left: 17%;
+    }
+    #alinhar{
+        width: 430px;
+    }
+    .resumo h3{
+        padding-top: 40px;
+        font-size: 15px;
+    }
+    #resumo{
+        width: 110px;
+        height: 90px;
+    }
+    #h3branco{
+        width: 350px;
+        height: 25px;
+    }
+    h3{
+        width: 350px;
+    }
+    #mvpimg{
+        width: 300px;
+        height: 180px;
+    }
 }
+
 
 @media  screen and (max-width:412px){
     h1{
@@ -356,12 +536,107 @@ h3{
         font-size: 14px;
         margin-left: 15px;
     }
-    #imgartefatos{
-        float:initial;
+    #introimg{
         width: 200px;
+        height:180px;
+        margin-left: 15%;
+        float: inherit;
+    }
+    #livrointro{
+        width: 150px;
+        height: 130px;
+        margin-bottom: 5%;
+    }
+    #imgscrum{
+        width: 230px;
         height: 200px; 
         margin-left: 10%;
+        float: inherit;
+    }
+    #timescrum{
+        width: 230px;
+        height: 200px; 
+        float: inherit;
+        margin-left: 10%;
+    }
+    #imgartefatos{
+        width: 150px;
+        height: 150px; 
+    }
+    #burndown{
+        margin-left: 0%;
+        width: 300px;
+        margin-bottom: 5%;
+    }
+    #imgdor{
+        width: 140px;
+        height: 120px;
+        float: initial;
+    }
+    #imgdod{
+        width: 140px;
+        height: 120px;
+        float: initial;
+        margin-top: 5%;
+    }
+    #imguserstory{
+        width: 170px;
+        height: 150px;
+        margin-top: 3%;
+        float: initial;
+        margin-left: 12%;
+    }
+    h3{
+        width: 70px;
+        height: 10px;
+        padding: 10px;
+        font-size: 12px;
+    }
+    #imgsoftskills{
+        width: 240px;
+        height: 200px;
+        float: initial;
+        margin-left: 16%;
+    }
+    #hardesoftimg{
+        width: 240px;
+        height: 200px;
+        float: initial;
+        margin-left: 8%;
+    }
+    #img{
+        width: 230px;
+        height: 190px;
+        margin-left: 10%;
+    }
+    #alinhar{
+        width: 310px;
+    }
+    .resumo h3{
+        padding-top: 20px;
+        font-size: 14px;
+
+    }
+    #resumo{
+        width: 110px;
+        height: 80px;
+
+    }
+    h3{
+        width: 230px;
+        height: 25px;
+        font-size: 18px;
+    }
+    
+    #h3branco{
+        width: 230px;
+        height: 25px;
+        font-size: 18px;
+    }
+    #mvpimg{
+        width: 270px;
+        height: 150px;
+        margin-left: 5%;
     }
 }
 
-    
