--- a/Páginas API/home.css
+++ b/Páginas API/home.css
@@ -3,19 +3,18 @@
 body{  
     background: linear-gradient(to bottom, #0c0d1e, #003336);
 }
-.nav-item{
+nav ul{
     display:flex;
     justify-content: space-around ;
     list-style-type: none;
-    margin-top: 8%;
     }
-.nav-link{
+nav a{
     color:white;
     text-decoration: none;
     font-family:'Exo 2';
     font-size: 20px;
 }
-.nav-link:hover{
+nav a:hover{
     color:#fff4a3;
 }
 main{
@@ -117,6 +116,9 @@ footer{
     background-color: black;
     padding-top: 50px;
     padding-bottom: 50px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 footer h3{
     font-family: "Exo 2";
@@ -140,6 +142,9 @@ footer a{
 }
 
 @media screen and (max-width:768px){
+    nav{
+        display: none;
+    }
     main h1{
         font-size:35px;
     }
