--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -672,6 +672,6 @@ h3{
     border-radius: 5px;
     cursor: pointer;
 }
-.option-btn:hover {
+.btnopçoes:hover {
     background-color: #a38812;
 }
