--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -276,6 +276,59 @@ h3{
     width: 1350px;
 }
 
+
+.burndown {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.input-group {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+input {
+    padding: 8px;
+    width: 120px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#modalburndown {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.chart-container {
+    position: relative;
+    height: 400px;
+    width: 100%;
+}
+
+#modalburndown{
+    background-color: #04AA6D;
+}
+
+#atualizargrafico{
+    background-color:#04AA6D;
+    border: none;
+
+}
+
 @media  screen and (max-width:768px){
     h1{
         font-size: 30px;
@@ -481,7 +534,6 @@ h3{
     }
 }
 
-
 @media  screen and (max-width:412px){
     h1{
         font-size: 30px;
@@ -615,4 +667,3 @@ h3{
         margin-left: 2%;
     }
 }
-
