--- a/Páginas API/style.css
+++ b/Páginas API/style.css
@@ -24,7 +24,7 @@ header h1{
     font-weight: 900;
     font-family: "Source Sans 3", bold;
     font-style: normal;
-    font-size: 30px;
+    font-size: 65px;
     margin-left: 50px;
     margin-top: 2%;
 }
@@ -67,15 +67,16 @@ h1{
     color: white;
     font-size: 50px;
 }
-#margin{
-    margin-top: 8%;
-    margin-bottom: -0.5%;
+.margin{
+    margin-top: 3%;
+    
+
 }
 h2{
     color:#d4af37;
     font-family: "Source Sans 3";
     font-weight: 900;
-    font-size: xx-large;
+    font-size: 35px;
     margin-bottom: 50px;
     margin-top: 20px;
 }
@@ -145,21 +146,6 @@ ol{
     float:inline-start;
     margin-right: 2%;
     margin-top: -2%;
-}
-
-h3{
-    background-color: black;
-    width: 500px;
-    height: 35px;
-    padding: 8px;
-    color: white;
-    font-family: 'Source Sans 3';
-    font-weight: 800;
-    text-align: center;
-    font-size: 18px;
-}
-.userstory{
-    display: inline;
 }
 
 #h3branco{
@@ -266,10 +252,6 @@ h3{
     margin-left: 27%;
     margin-top: 3%;
     margin-bottom: -5%;
-}
-#qpo{
-    margin-top: 1%;
-    text-align: left;
 }
 
 #alinhar{
