--- a/Páginas API/home.css
+++ b/Páginas API/home.css
@@ -121,34 +121,13 @@ section ul{
     margin-left: 1%;
     list-style-type: none;
 }
-footer{
-    background-color: black;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-footer h3{
-    font-family: "Exo 2";
-    color:#fff4a3;
-    font-size: 20px;
-    font-weight: 800;
-}
-footer p{
-    color:white;
-    font-family: "Exo 2";
-    font-weight: 700;
-    font-size: 17px;
+footer {
+   img {
+    width: 100px;
+   }
 }
 
-footer a{
-    font-family: "Source Sans 3";
-    text-decoration: none;
-    color: white;
-    font-weight: 700;
-    font-size: 16px;
-}
+  
 
 @media screen and (max-width:768px){
     nav{
